--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@reduxjs/toolkit": "^1.4.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
+    "react-navigation": "^4.4.0",
+    "react-navigation-hooks": "^1.1.0",
+    "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0"
   },
   "devDependencies": {
