--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-shared-element": "^0.7.0",
     "react-navigation": "^4.4.0",
     "react-navigation-hooks": "^1.1.0",
+    "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0"
   },
