--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.19.2",
+    "json-api-normalizer": "^1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -31,7 +33,8 @@
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.8.2",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "redux-batched-actions": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
