--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "json-api-normalizer": "^1.0.0",
+    "lodash": "^4.17.19",
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -34,7 +35,8 @@
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
-    "redux-batched-actions": "^0.5.0"
+    "redux-batched-actions": "^0.5.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -43,9 +45,11 @@
     "@commitlint/config-conventional": "^9.1.1",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.157",
     "@types/react-native": "^0.62.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/redux-logger": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
