--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-shared-element": "^0.7.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-navigation": "^4.4.0",
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
@@ -47,6 +48,7 @@
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.157",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.2",
     "@types/redux-logger": "^3.0.8",
