--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
@@ -37,7 +38,8 @@
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
     "redux-batched-actions": "^0.5.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
