--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-shared-element": "^0.7.0",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-vector-icons": "^7.0.0",
     "react-navigation": "^4.4.0",
     "react-navigation-hooks": "^1.1.0",
