--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-navigation-hooks": "^1.1.0",
     "react-navigation-shared-element": "^2.3.1",
     "react-navigation-stack": "^2.8.2",
+    "react-query": "^2.5.6",
     "react-redux": "^7.2.0",
     "redux-batched-actions": "^0.5.0",
     "redux-logger": "^3.0.6",
