--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,7 @@ project.ext.react = [
 ]
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'FontAwesome.ttf' ]
+    iconFontNames: [ 'FontAwesome.ttf', 'MaterialIcons.ttf' ]
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
