feat: add text view more/less

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.63.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-redash": "^14.2.3",
     "react-native-safe-area-context": "^3.1.1",
@@ -54,6 +55,7 @@
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.157",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-read-more-text": "^1.0.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.2",
